tests/codegen/fail/interface/derive_wrong_item.stderr
error: GraphQL interface can only be derived on structs
 --> fail/interface/derive_wrong_item.rs:9:1
  |
9 | #[graphql(for = ObjA)]
  | ^
